[package]
name = "powreader"
version = "0.1.0"
authors = ["Mark Nijboer <mark@nijboer.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
debug-assertions = false
debug = false
rpath = false
panic = "abort"


[dependencies]
serial = "0.4.0"
lazy_static = "1.4.0"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
clap = "2.33.3"
influx_db_client = { version = "0.4.5", default-features = false, features = ["rustls-tls"] }